--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@chec/commerce.js": "^2.8.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@mui/material": "^5.1.1",
     "@stripe/react-stripe-js": "^1.6.0",
     "@stripe/stripe-js": "^1.20.3",
     "@testing-library/jest-dom": "^5.14.1",
